--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,5 +1,10 @@
-#input-html,
-#input-jade {
-  width: 90%;
+.CodeMirror {
+  width: 100%;
   height: 500px;
+  border: 1px solid #333333;
+  box-shadow: 0 0 2px blue;
+}
+
+footer {
+  margin-top: 20px;
 }
